<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/meubg"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/Medipickic"
        android:layout_width="66dp"
        android:layout_height="90dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="-90dp"
        android:layout_marginLeft="20dp"
        app:srcCompat="@drawable/logolaercio"
        android:contentDescription="@string/todo"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/Medipicktxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="50dp"
        android:text="@string/medipick"
        android:textColor="#fff"
        android:textSize="64sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/welcometxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="#fff"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="-31dp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/plhtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_login_here"
        android:textColor="#fff"
        android:layout_marginLeft="128dp"
        android:textSize="23sp" />

    <ImageView
        android:id="@+id/usericimage"
        android:layout_width="25dp"
        android:layout_marginLeft="5dp"
        android:layout_height="25dp"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/useric" />

    <EditText
        android:id="@+id/txtEmailUsu"
        android:layout_width="427dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-35dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:ems="10"
        android:hint="       User Name/Email"
        android:inputType="textPersonName"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/lockicimg"
        android:layout_width="25dp"
        android:layout_marginLeft="5dp"
        android:layout_height="25dp"
        app:srcCompat="@drawable/lockic" />

    <EditText
        android:id="@+id/txtSenhaUsu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="-35dp"
        android:inputType="textPassword"
        android:textStyle="bold"
        android:hint="       Password"/>

    <TextView
        android:id="@+id/forgottxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:text="Forgot Password?"
        android:textColor="#fff"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textColor="#fff"
        android:background="@drawable/btn_rounded" />

    <Button
        android:id="@+id/btsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_rounded2"
        android:text="Sign Up"
        android:textColor="#fff" />


</LinearLayout>